--- a/uaa/conf/dev/api.conf
+++ b/uaa/conf/dev/api.conf
@@ -12,9 +12,9 @@ account=dddd1
 pw=123456
 
 [plat]
-origin=http://pt2.bccp.co:19091
+origin=http://pt2.bccp.co
 account=test2
-pw=123qwe
+pw=1234qwer
 
 [control]
 account=testcontrol
