--- a/uaa/conf/test/api.conf
+++ b/uaa/conf/test/api.conf
@@ -14,9 +14,12 @@ account=dddd1
 pw=123456
 
 [plat]
-origin=http://pt2.bccp.co
-account=test2
-pw=1234qwer
+# origin=http://pt2.bccp.co
+# account=test2
+# pw=1234qwer
+origin=http://pt3.bccp.co
+account=test_bella
+pw=111111
 
 [control]
 account=testcontrol
